# luomi

./: .cproject  .project  CHANGELOG.txt  CMakeLists.txt
doc/: edb.txt
src/: CMakeLists.txt
src/client/inc/: tsclient.h
src/client/src/: lmcServer.c  tscSQLParser.c  tscServer.c  tscSystem.c  tscUtil.c
src/collectors/: CMakeLists.txt
src/collectors/modbusrtu/: CMakeLists.txt
src/collectors/modbusrtu/inc/: modbusRtu.h
src/collectors/modbusrtu/src/: modbusRtu.c
src/collectors/modbustcp/: CMakeLists.txt
src/collectors/modbustcp/inc/: modbusTcp.h
src/collectors/modbustcp/src/: modbusTcp.c
src/connector/grafana/tdengine/: datasource.js  module.js  query_ctrl.js
src/connector/nodejs/: package-lock.json
src/connector/python/windows/python3/: setup.py
src/connector/python/windows/python3/taos/: cinterface.py  connection.py
src/connector/python/windows/python3/taos.egg-info/: PKG-INFO
src/edb/: CMakeLists.txt
src/edb/inc/: db.h
src/edb/src/: compress.c  db.c  luomi.def  query.c
src/inc/: lmdb.h  sql.y  taosmsg.h  tsql.h  ttime.h
src/kit/: CMakeLists.txt
src/kit/edbdemo/: CMakeLists.txt  demo.c  query.c
src/kit/gate/: CMakeLists.txt
src/kit/gate/inc/: gateSystem.h
src/kit/gate/src/: gateLinux.c  gateService.c  gateSystem.c  gateWindows.c
src/os/linux/inc/: os.h
src/rpc/src/: tstring.c
src/system/src/: lmGate.c  mgmtAcct.c  mgmtMeter.c  mgmtSystem.c  mgmtUser.c
src/util/: CMakeLists.txt
src/util/src/: sql.c  sql.h  sql.y  tcache.c  tcompression.c  tcrc32c.c  tglobalcfg.c  tidpool.c  tinterpolation.c  ttime.c  ttokenizer.c  ttypes.c
tests/: luomi.sql
